methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime7.SlugTracking'
def run(){while(!estSurBiscuit()){if(isFacingTrail()){avance()};else{droite()}}
    ^