methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    if(estFaceMur()){return false};
  	else{ avance()
  					if(getCouleurSol()== "Color.green"){return true};
        			else{return false}}}


def run(){while(!estSurBiscuit()){if(isFacingTrail()){avance()};else{droite()}}
          prendBiscuit()}